maybe the final safari safari

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -17,6 +17,7 @@ html, body {
 .js-loading *:before,
 .js-loading *:after {
   animation-play-state: paused;
+  -webkit-animation: none;
 }
 
 article,
